--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 RelativelyPrimeTester/.vs/*
 RelativelyPrimeTester/RelativelyPrimeTester/bin/*
 RelativelyPrimeTester/RelativelyPrimeTester/obj/*
+.vscode/*
