--- a/RelativelyPrimeTester/RelativelyPrimeTester/RelativelyPrimeTester.csproj
+++ b/RelativelyPrimeTester/RelativelyPrimeTester/RelativelyPrimeTester.csproj
@@ -19,4 +19,10 @@
 	</None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="RelativelyPrime\macOS\RelativelyPrime.app\Contents\MonoBundle\runtimeconfig.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
